--- a/Project 2 MVD Updated.ipynb
+++ b/Project 2 MVD Updated.ipynb
@@ -8911,11 +8911,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"success\":true,\"status_code\":1,\"status_message\":\"Success.\"}\n"
+     ]
+    }
+   ],
    "source": [
-    "do "
+    "import requests\n",
+    "\n",
+    "url = \"https://api.themoviedb.org/3/authentication\"\n",
+    "\n",
+    "headers = {\n",
+    "    \"accept\": \"application/json\",\n",
+    "    \"Authorization\": \"Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiIwYjk2MGVlMzEyNjc2MmQ1YWYxYzBiNzcyYThjYWY0YSIsIm5iZiI6MTcyNzkxNzM3OC41NzYyNzcsInN1YiI6IjY2ZmExYjllMWE5YzkxODhmZWNjN2QyZiIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.RZDYN5UfOGJAfvqLkhKdsfMRdFydvOUB6IFMHUS-TgI\"\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url, headers=headers)\n",
+    "\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset created and saved as 'now_playing_movies.csv'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Set up the TMDb API URL and headers\n",
+    "api_key = \"0b960ee3126762d5af1c0b772a8caf4a\"\n",
+    "url = \"https://api.themoviedb.org/3/movie/now_playing\"\n",
+    "\n",
+    "# Set up parameters\n",
+    "params = {\n",
+    "    \"api_key\": api_key,\n",
+    "    \"language\": \"en-US\",\n",
+    "    \"page\": 1  # You can change this to get more pages if needed\n",
+    "}\n",
+    "\n",
+    "# Make the API request\n",
+    "response = requests.get(url, params=params)\n",
+    "\n",
+    "# Check if the response is successful\n",
+    "if response.status_code == 200:\n",
+    "    data = response.json()\n",
+    "    \n",
+    "    # Extract relevant movie information\n",
+    "    movies = []\n",
+    "    for movie in data['results']:\n",
+    "        movie_info = {\n",
+    "            \"title\": movie.get(\"title\"),\n",
+    "            \"release_date\": movie.get(\"release_date\"),\n",
+    "            \"overview\": movie.get(\"overview\"),\n",
+    "            \"vote_average\": movie.get(\"vote_average\"),\n",
+    "            \"poster_path\": f\"https://image.tmdb.org/t/p/w500{movie.get('poster_path')}\",\n",
+    "            \"original_language\": movie.get(\"original_language\"),\n",
+    "            \"popularity\": movie.get(\"popularity\"),\n",
+    "            \"id\": movie.get(\"id\"),\n",
+    "        }\n",
+    "        movies.append(movie_info)\n",
+    "\n",
+    "    # Create a DataFrame\n",
+    "    df = pd.DataFrame(movies)\n",
+    "\n",
+    "    # Save the dataset to a CSV file\n",
+    "    df.to_csv('now_playing_movies.csv', index=False)\n",
+    "    print(\"Dataset created and saved as 'now_playing_movies.csv'.\")\n",
+    "\n",
+    "else:\n",
+    "    print(f\"Failed to retrieve data: {response.status_code} - {response.text}\")"
    ]
   }
  ],
