--- a/Project 2 MVD Updated.ipynb
+++ b/Project 2 MVD Updated.ipynb
@@ -8997,6 +8997,122 @@
     "else:\n",
     "    print(f\"Failed to retrieve data: {response.status_code} - {response.text}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                      title release_date  \\\n",
+      "0                  The Crow   2024-08-21   \n",
+      "1            Kill 'em All 2   2024-09-24   \n",
+      "2             The Substance   2024-09-07   \n",
+      "3           It Ends with Us   2024-08-07   \n",
+      "4   Beetlejuice Beetlejuice   2024-09-04   \n",
+      "5       Joker: Folie à Deux   2024-10-01   \n",
+      "6             Speak No Evil   2024-09-11   \n",
+      "7            The Wild Robot   2024-09-12   \n",
+      "8               Hijack 1971   2024-06-21   \n",
+      "9               Borderlands   2024-08-07   \n",
+      "10            Hounds of War   2024-08-29   \n",
+      "11                    Wolfs   2024-09-20   \n",
+      "12         Transformers One   2024-09-11   \n",
+      "13       Officer Black Belt   2024-09-10   \n",
+      "14                   Outlaw   2024-06-20   \n",
+      "15             Subservience   2024-08-15   \n",
+      "16           Alien: Romulus   2024-08-13   \n",
+      "17                   Afraid   2024-08-28   \n",
+      "18                    Joker   2019-10-01   \n",
+      "19              Amber Alert   2024-09-27   \n",
+      "\n",
+      "                                             overview  vote_average  \\\n",
+      "0   Soulmates Eric and Shelly are brutally murdere...         5.400   \n",
+      "1   Phillip and Suzanne are retired from the spy g...         7.186   \n",
+      "2   A fading celebrity decides to use a black mark...         7.269   \n",
+      "3   When a woman's first love suddenly reenters he...         6.920   \n",
+      "4   After a family tragedy, three generations of t...         7.156   \n",
+      "5   While struggling with his dual identity, Arthu...         6.470   \n",
+      "6   When an American family is invited to spend th...         7.100   \n",
+      "7   After a shipwreck, an intelligent robot called...         7.800   \n",
+      "8   Pilots Tae-in and Gyu-sik are set to fly to Gi...         6.400   \n",
+      "9   Returning to her home planet, an infamous boun...         5.876   \n",
+      "10  After a mission goes wrong, only one of a grou...         6.454   \n",
+      "11  Hired to cover up a high-profile crime, a fixe...         6.614   \n",
+      "12  The untold origin story of Optimus Prime and M...         7.347   \n",
+      "13  A talented martial artist who can't walk past ...         7.937   \n",
+      "14  At the age of nine, Rebeca is sold by her gran...         6.482   \n",
+      "15  With his wife out sick, a struggling father br...         6.592   \n",
+      "16  While scavenging the deep ends of a derelict s...         7.100   \n",
+      "17  Curtis Pike and his family are selected to tes...         6.427   \n",
+      "18  During the 1980s, a failed stand-up comedian i...         8.200   \n",
+      "19  An ordinary rideshare becomes a high-stakes ga...         5.800   \n",
+      "\n",
+      "                                          poster_path original_language  \\\n",
+      "0   https://image.tmdb.org/t/p/w500/58QT4cPJ2u2TqW...                en   \n",
+      "1   https://image.tmdb.org/t/p/w500/hgA5hN3NjNNSTX...                en   \n",
+      "2   https://image.tmdb.org/t/p/w500/lqoMzCcZYEFK72...                en   \n",
+      "3   https://image.tmdb.org/t/p/w500/cSMdFWmajaX4oU...                en   \n",
+      "4   https://image.tmdb.org/t/p/w500/kKgQzkUCnQmeTP...                en   \n",
+      "5   https://image.tmdb.org/t/p/w500/if8QiqCI7WAGIm...                en   \n",
+      "6   https://image.tmdb.org/t/p/w500/dA4N6uWOnEMgbx...                en   \n",
+      "7   https://image.tmdb.org/t/p/w500/hn4fOpFlbak5ru...                en   \n",
+      "8   https://image.tmdb.org/t/p/w500/68jNkFi61MQjrJ...                ko   \n",
+      "9   https://image.tmdb.org/t/p/w500/865DntZzOdX6rL...                en   \n",
+      "10  https://image.tmdb.org/t/p/w500/lRBT73EWsiQPuq...                en   \n",
+      "11  https://image.tmdb.org/t/p/w500/vOX1Zng472PC2K...                en   \n",
+      "12  https://image.tmdb.org/t/p/w500/qbkAqmmEIZfrCO...                en   \n",
+      "13  https://image.tmdb.org/t/p/w500/rEaJSXAlNfdhRp...                ko   \n",
+      "14  https://image.tmdb.org/t/p/w500/rGS8SzheANVQic...                pt   \n",
+      "15  https://image.tmdb.org/t/p/w500/gBenxR01Uy0Ev9...                en   \n",
+      "16  https://image.tmdb.org/t/p/w500/b33nnKl1GSFbao...                en   \n",
+      "17  https://image.tmdb.org/t/p/w500/gUREuXCnJLVHsv...                en   \n",
+      "18  https://image.tmdb.org/t/p/w500/udDclJoHjfjb8E...                en   \n",
+      "19  https://image.tmdb.org/t/p/w500/vkrmJ2fStfnvsL...                en   \n",
+      "\n",
+      "    popularity       id  \n",
+      "0     1403.514   957452  \n",
+      "1     1201.354  1215162  \n",
+      "2     1131.940   933260  \n",
+      "3     1014.814  1079091  \n",
+      "4      861.066   917496  \n",
+      "5      850.848   889737  \n",
+      "6      824.074  1114513  \n",
+      "7      818.040  1184918  \n",
+      "8      795.105  1147710  \n",
+      "9      761.349   365177  \n",
+      "10     726.152   949484  \n",
+      "11     590.936   877817  \n",
+      "12     582.958   698687  \n",
+      "13     539.213  1139817  \n",
+      "14     520.146  1186947  \n",
+      "15     477.546  1064028  \n",
+      "16     463.177   945961  \n",
+      "17     445.293  1062215  \n",
+      "18     380.692   475557  \n",
+      "19     379.144  1248753  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the dataset from the CSV file\n",
+    "df = pd.read_csv('now_playing_movies.csv')\n",
+    "\n",
+    "# Display the entire DataFrame\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
