Update Project 2 MVD Updated.ipynb

--- a/Project 2 MVD Updated.ipynb
+++ b/Project 2 MVD Updated.ipynb
@@ -9112,7 +9112,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#find all images in soup\n",
+    "\n",
+    "img_tags=soup.find_all('img')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save images in folder and save alt text in dataframe\n",
+    "count=0\n",
+    "alt_text=[]\n",
+    "for i in img_tags:\n",
+    "    img=requests.get(i['src'])\n",
+    "\n",
+    "    #save image\n",
+    "    with open(\"cnn_images/\"+str(count)+\".jpg\",'wb') as f:\n",
+    "        f.write(img.content)\n",
+    "    count+=1\n",
+    "    #save description\n",
+    "    alt_text.append(i['alt'])\n",
+    "\n",
+    "    #only take top 10 images\n",
+    "    if count==10:\n",
+    "        break\n",
+    "df=pd.DataFrame(alt_text,columns=['alt_text'])"
+   ]
   }
  ],
  "metadata": {
