--- a/Project 2 MVD Updated.ipynb
+++ b/Project 2 MVD Updated.ipynb
@@ -9152,27 +9152,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poster downloaded successfully.\n"
+     ]
+    }
+   ],
    "source": [
-    "#save images in folder and save alt text in dataframe\n",
-    "count=0\n",
-    "alt_text=[]\n",
-    "for i in img_tags:\n",
-    "    img=requests.get(i['src'])\n",
+    "import requests\n",
     "\n",
-    "    #save image\n",
-    "    with open(\"cnn_images/\"+str(count)+\".jpg\",'wb') as f:\n",
-    "        f.write(img.content)\n",
-    "    count+=1\n",
-    "    #save description\n",
-    "    alt_text.append(i['alt'])\n",
+    "url = \"https://image.tmdb.org/t/p/w500/b33nnKl1GSFbao4l3fZDDqsMx0F.jpg\"\n",
+    "response = requests.get(url)\n",
     "\n",
-    "    #only take top 10 images\n",
-    "    if count==10:\n",
-    "        break\n",
-    "df=pd.DataFrame(alt_text,columns=['alt_text'])"
+    "if response.status_code == 200:\n",
+    "    with open(\"Alien Romulus Movie Poster.jpg\", \"wb\") as file:\n",
+    "        file.write(response.content)\n",
+    "    print(\"Poster downloaded successfully.\")\n",
+    "else:\n",
+    "    print(\"Failed to download poster.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poster downloaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://image.tmdb.org/t/p/w500/cSMdFWmajaX4oUMLx7HEDI84GkP.jpg\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    with open(\"It Ends With Us Movie Poster\", \"wb\") as file:\n",
+    "        file.write(response.content)\n",
+    "    print(\"Poster downloaded successfully.\")\n",
+    "else:\n",
+    "    print(\"Failed to download poster.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poster downloaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://image.tmdb.org/t/p/w500/cSMdFWmajaX4oUMLx7HEDI84GkP.jpg\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    with open(\"Beetlejuice BeetleJuice Movie Poster\", \"wb\") as file:\n",
+    "        file.write(response.content)\n",
+    "    print(\"Poster downloaded successfully.\")\n",
+    "else:\n",
+    "    print(\"Failed to download poster.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poster downloaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://image.tmdb.org/t/p/w500/865DntZzOdX6rLMd405R0nFkLmL.jpg\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    with open(\"Borderlands Movie Poster\", \"wb\") as file:\n",
+    "        file.write(response.content)\n",
+    "    print(\"Poster downloaded successfully.\")\n",
+    "else:\n",
+    "    print(\"Failed to download poster.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poster downloaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://image.tmdb.org/t/p/w500/dA4N6uWOnEMgbxXwFX7qX7adzs8.jpg\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    with open(\"Speak No Evil Movie Poster\", \"wb\") as file:\n",
+    "        file.write(response.content)\n",
+    "    print(\"Poster downloaded successfully.\")\n",
+    "else:\n",
+    "    print(\"Failed to download poster.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poster downloaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://image.tmdb.org/t/p/w500/iCh0YvdHVh5PakiZhaUqiwsbQeC.jpg\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    with open(\"Cuckoo Movie Poster\", \"wb\") as file:\n",
+    "        file.write(response.content)\n",
+    "    print(\"Poster downloaded successfully.\")\n",
+    "else:\n",
+    "    print(\"Failed to download poster.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poster downloaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://image.tmdb.org/t/p/w500/aciP8Km0waTLXEYf5ybFK5CSUxl.jpg\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    with open(\"Joker Movie Poster\", \"wb\") as file:\n",
+    "        file.write(response.content)\n",
+    "    print(\"Poster downloaded successfully.\")\n",
+    "else:\n",
+    "    print(\"Failed to download poster.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poster downloaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://image.tmdb.org/t/p/w500/hgA5hN3NjNNSTXYOmAI6KNKOzbp.jpg\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    with open(\"Kill em All 2 Movie Poster\", \"wb\") as file:\n",
+    "        file.write(response.content)\n",
+    "    print(\"Poster downloaded successfully.\")\n",
+    "else:\n",
+    "    print(\"Failed to download poster.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poster downloaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://image.tmdb.org/t/p/w500/lqoMzCcZYEFK729d6qzt349fB4o.jpg\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    with open(\"The Substance Movie Poster\", \"wb\") as file:\n",
+    "        file.write(response.content)\n",
+    "    print(\"Poster downloaded successfully.\")\n",
+    "else:\n",
+    "    print(\"Failed to download poster.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poster downloaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://image.tmdb.org/t/p/w500/58QT4cPJ2u2TqWZkterDq9q4yxQ.jpg\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "    with open(\"The Crow Movie Poster\", \"wb\") as file:\n",
+    "        file.write(response.content)\n",
+    "    print(\"Poster downloaded successfully.\")\n",
+    "else:\n",
+    "    print(\"Failed to download poster.\")"
    ]
   }
  ],
