Wikipedia PNG Image

--- a/Project 2 MVD Updated.ipynb
+++ b/Project 2 MVD Updated.ipynb
@@ -4441,6 +4441,7 @@
     }
    ],
    "source": [
+    "#AI generated code\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import os\n",
@@ -9148,6 +9149,15 @@
     "#find all images in soup\n",
     "\n",
     "img_tags=soup.find_all('img')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#AI generated code to get the images into the repository"
    ]
   },
   {
